// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-serialization-spec-parser basic parsing parse() works properly 1`] = `
Array [
  Object {
    "attrs": Object {},
    "blockName": "core/more",
    "innerBlocks": Array [],
    "innerHTML": "<!--more-->",
  },
]
`;

exports[`block-serialization-spec-parser-php basic parsing parse() works properly 1`] = `
Array [
  Object {
    "attrs": Array [],
    "blockName": "core/more",
    "innerBlocks": Array [],
    "innerHTML": "<!--more-->",
  },
]
`;
